Correção de texto.

--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/avaliar-relatorio.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/avaliar-relatorio.html
@@ -5,7 +5,7 @@
     layout:decorator="layouts/LayoutSupervisor">
 
 <head>
-	<title>Gestão Pessoas | Avaliar Relatorio</title>
+	<title>Gestão Pessoas | Avaliar Relatório</title>
 </head>
 
 <section layout:fragment="conteudo">
@@ -17,9 +17,9 @@
         	<li><a th:href="@{/Supervisor/}" >Minhas Turmas</a></li>
             <li><a th:href="@{/Supervisor/Turma/1/}">Detalhes Turma</a></li>
             <li><a th:href="@{/Supervisor/Turma/1/AcompanhamentoEstagiario/1}">Acompanhamento Estagiário</a></li>
-            <li><a th:href="@{/Supervisor/Turma/Acompanhamento/1/AvaliarRelatorio}">Avaliar Relátorio</a></li>
+            <li><a th:href="@{/Supervisor/Turma/Acompanhamento/1/AvaliarRelatorio}">Avaliar Relatório</a></li>
         </ul>
-        <h1>Avaliar Relátorio</h1>
+        <h1>Avaliar Relatório</h1>
     </div>
   </div>
 
