implementação funcional de detalhes turma, não completo ainda

--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
@@ -34,7 +34,7 @@
 				    <tbody>
 				      <tr>
 				        <td class="gp-sem-borda"><strong>Orientador</strong></td>
-				        <td class="gp-sem-borda">Bruno Gois</td>
+				        <td th:text="${turma.orientador.nome}"class="gp-sem-borda">Bruno Gois</td>
 				      </tr>
 				      <tr>
 				        <td><strong>Supervisores</strong></td>
