--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/detalhes-turma.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/detalhes-turma.html
@@ -35,7 +35,7 @@
 				    <tbody>
 				      <tr>
 				        <td class="gp-sem-borda"><strong>Orientador</strong></td>
-				        <td class="gp-sem-borda">Bruno Gois</td>
+				        <td th:text="${turma.orientador.nome}" class="gp-sem-borda"> bruno</td>
 				      </tr>
 				      <tr>
 				        <td><strong>Supervisores</strong></td>
@@ -43,11 +43,22 @@
 				      </tr>
 				      <tr>
 				        <td><strong>Período</strong></td>
-				        <td>01/03/2016 a 01/07/2016</td>
+				        <td><label th:text="${turma.inicio}"></label>  a <label th:text="${turma.termino}"></label></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Expediente</strong></td>
-				        <td>Segunda-feira - 08:00 ás 12:00<br/>Segunda-feira - 08:00 ás 12:00<br/>Segunda-feira - 08:00 ás 12:00</td>
+				        <tr>
+				        	<table>
+				        		<thead>
+				        			<tr>dia</tr>
+				        			<tr>inicio</tr>
+				        			<tr>fim</tr>
+				        		</thead>
+				        		<tbody>
+				        			
+				        		</tbody>
+				        	</table>
+				        </tr>
 				      </tr>
 				    </tbody>
 				  </table>
