--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/list-turmas.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/list-turmas.html
@@ -20,6 +20,12 @@
   </div>
 
 	<div class="container animated fadeInRight"> 
+
+<div class="alert alert-dismissible alert-warning" th:if="${!#strings.isEmpty(error)}">
+  <button type="button" class="close" data-dismiss="alert">&times;</button>
+  <p th:text="${error}"></p>
+</div>		
+	
     <div class="row">
     <div class="col-sm-12">
       <div class="panel panel-default">
