--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-avaliacao-plano.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/adicionar-avaliacao-plano.html
@@ -64,23 +64,23 @@
 			        	<a class="panel-title" data-toggle="collapse" data-target="#detalhesEstagiario"><i class="fa fa-caret-down" aria-hidden="true"></i> Avaliar Plano</a>
 		  			</div>
 			        <div id="detalhesEstagiario" class="panel-body collapse in">
-				        <form class="form-horizontal">
+				        <form id="form-avaliar" class="form-horizontal" th:action="@{/Turma/AcompanhamentoEstagiario/${idEstagio}/AvaliarPlano}" th:object="${submissaoPlano}" method="post">				     
 							<div class="form-group">
 						      <label for="inputEmail" class="col-lg-2 control-label">Status</label>
 						      <div class="col-lg-10">
-						        <input type="text" class="form-control" id="inputEmail" placeholder="Status"></input>
+						        <input type="text" class="form-control" id="inputStatus" placeholder="Status"></input>
 						      </div>
 						    </div>
 							<div class="form-group">
 						      <label for="inputEmail" class="col-lg-2 control-label">Nota</label>
 						      <div class="col-lg-10">
-						        <input type="text" class="form-control" id="inputEmail" placeholder="Nota"></input>
+						        <input type="text" th:field="*{nota}" class="form-control" id="inputNota" placeholder="Nota"></input>
 						      </div>
 						    </div>
 							<div class="form-group">
-						      <label for="textArea" class="col-lg-2 control-label">Comentário</label>
+						      <label for="comentario" class="col-lg-2 control-label">Comentário</label>
 						      <div class="col-lg-10">
-						        <textarea class="form-control" rows="3" id="textArea"></textarea>
+						        <textarea class="form-control" th:field="*{comentario}" rows="3" id="comentario"></textarea>
 						        <span class="help-block">Comentário sobre a avaliação.</span>
 						      </div>
 						    </div>
