--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/acompanhamento-estagio.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/acompanhamento-estagio.html
@@ -46,7 +46,7 @@
 				      </tr>
 				      <tr>
 				        <td><strong>Comentario</strong></td>
-				        <td>Segunda-feira - 08:sdfpijas-feira - 0asdfasfd8:00 ás 12:asdfsdpfojasdfasdafSegunda-feira - 08:00 ás 12:00</td>
+				        <td></td>
 				      </tr>
 				    </tbody>
 				  </table>
@@ -190,7 +190,7 @@
 	
 	</div>
 
-	<div id="submissaoPlano" class="modal animated zoomInDown">
+	<div id="submissaoPlano" class="modal">
 		 <form class="form-horizontal" th:action="@{/Estagiario/Acompanhamento/1/SubmeterPlano}" method="post" enctype="multipart/form-data">
 		   <div class="modal-dialog">
 		     <div class="modal-content">
@@ -214,7 +214,7 @@
 	</div>
      
      
-     <div id="submissaoRelatorio" class="modal animated zoomInDown">
+     <div id="submissaoRelatorio" class="modal">
      	<form class="form-horizontal" th:action="@{/Estagiario/Acompanhamento/Estagio/1/SubmeterRelatorio}" method="post" enctype="multipart/form-data">
 		   <div class="modal-dialog">
 		     <div class="modal-content">
