--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/avaliar-relatorio.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/avaliar-relatorio.html
@@ -96,7 +96,7 @@
 				    <div class="form-group">
   						<label class="control-label col-lg-2" for="nota"> Nota</label>
   						<div class="col-lg-10">
-  						<input type="text" class="form-control" id="nota"/>
+  						<input type="text" class="form-control" id="nota" placeholder="0.0"/>
 						</div>
 					</div>
 					
