--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/acompanhamento-estagio.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/estagiario/acompanhamento-estagio.html
@@ -31,29 +31,32 @@
 	          </div>
 	          <div id="planoEstagio" class="panel-body collapse in">
 				  <table class="table table-hover">
-				    <tbody>
+				    <tbody th:if="${submissaoPlano != null}">
 				      <tr>
 				        <td class="gp-sem-borda"><strong>Documento</strong></td>
 				        <td class="gp-sem-borda"><a class="gp-link-download-submissao">20/7/2016 - Plano de Estágio </a></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Status</strong></td>
-				        <td>SUBMETIDO</td>
+				        <td th:text="${submissaoPlano.statusEntrega}"></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Nota</strong></td>
-				        <td>9.5</td>
+				        <td th:text="${submissaoPlano.nota}"></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Comentario</strong></td>
-				        <td></td>
+				        <td th:text="${submissaoPlano.comentario}"></td>
 				      </tr>
 				    </tbody>
 				  </table>
 				  
 		            <div class="gp-modelo-doc">
 		            	Modelo de Plano de Estágio <a href="#">Clique aqui para baixar!</a>
-		            	<a href="#submissaoPlano" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Editar submissao</a>
+		            	<div th:if="${submissaoPlano != null}">
+		            		<a th:if="${#strings.equals(submissaoPlano.statusEntrega, 'SUBMETIDO')} or ${#strings.equals(submissaoPlano.statusEntrega, 'CORRECAO')}" href="#submissaoPlano" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Editar Submissão</a>
+		            	</div>
+		            	<a th:if="${submissaoPlano == null}" href="#submissaoPlano" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Submeter</a>
 		            </div>    
 	           </div>
 	        </div>
@@ -72,20 +75,22 @@
 				      </tr>
 				      <tr>
 				        <td><strong>Status</strong></td>
-				        <td>SUBMETIDO</td>
+				        	<td th:text="${submissaoRelatorio.statusEntrega}"></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Nota</strong></td>
-				        <td>9.0</td>
+				        <td th:text="${submissaoRelatorio.nota}"></td>
 				      </tr>
 				      <tr>
 				        <td><strong>Comentario</strong></td>
-				        <td></td>
+				        <td th:text="${submissaoRelatorio.comentario}"></td>
 				      </tr>
 				    </tbody>
 				  </table>
 		            <div class="gp-modelo-doc">Modelo de Relatório de Estágio 
-		            	<a href="#">Clique aqui para baixar!</a><a href="#submissaoRelatorio" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Submeter</a>
+		            	<a href="#">Clique aqui para baixar!</a>
+		            	<a th:if="${#strings.equals(submissaoRelatorio.statusEntrega, 'SUBMETIDO')} or ${#strings.equals(submissaoRelatorio.statusEntrega, 'CORRECAO')}" href="#submissaoPlano" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Editar Submissão</a>
+		            	<a th:if="${submissaoRelatorio == null}" href="#submissaoPlano" class="btn btn-success btn-sm pull-right gp-submissao-modal" data-toggle="modal">Submeter</a>
 		            </div>       
 				</div>
 			</div>
@@ -190,51 +195,97 @@
 	
 	</div>
 
-	<div id="submissaoPlano" class="modal">
-		 <form class="form-horizontal" th:action="@{/Estagiario/Acompanhamento/1/SubmeterPlano}" method="post" enctype="multipart/form-data">
-		   <div class="modal-dialog">
-		     <div class="modal-content">
-		       <div class="modal-header">
-		         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		         <h4 class="modal-title">Plano de Estágio</h4>
-		       </div>
-		
-		         <div class="modal-body">
-		             <label for="inputArquivo">Plano de Estágio</label><br/>
-		             <input type="file" class="form-control" id="inputArquivo" placeholder="Arquivo" name="planoEstagio" /> 
-		         </div>
-		         
-		         <div class="modal-footer">
-		           <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-		           <button type="submit" class="btn btn-success">Submeter <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></button>
-		         </div>
-		     </div>
-		   </div>
-		</form>
-	</div>
-     
-     
-     <div id="submissaoRelatorio" class="modal">
-     	<form class="form-horizontal" th:action="@{/Estagiario/Acompanhamento/Estagio/1/SubmeterRelatorio}" method="post" enctype="multipart/form-data">
-		   <div class="modal-dialog">
-		     <div class="modal-content">
-		       <div class="modal-header">
-		         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-		         <h4 class="modal-title">Relatório de Estágio</h4>
-		       </div>
-		
-		         <div class="modal-body">
-		             <label for="inputArquivo">Relatório de Estágio</label><br/>
-		             <input type="file" class="form-control" id="inputArquivo" placeholder="Arquivo" name="relatorio" /> 
-		         </div>
-		         
-		         <div class="modal-footer">
-		           <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
-		           <button type="submit" class="btn btn-success">Submeter <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></button>
-		         </div>
-		     </div>
-		   </div>	 
-     	</form>	
-     </div>
+
+		<div th:if="${submissaoPlano} == null"  id="submissaoPlano" class="modal">
+			 <form class="form-horizontal" th:action="@{/Estagiario/Acompanhamento/${idEstagio}/SubmeterPlano}" method="post" enctype="multipart/form-data">
+			   <div class="modal-dialog">
+			     <div class="modal-content">
+			       <div class="modal-header">
+			         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			         <h4 class="modal-title">Plano de Estágio</h4>
+			       </div>
+			
+			         <div class="modal-body">
+			             <label for="inputArquivo">Plano de Estágio</label><br/>
+			             <input type="file" class="form-control" id="inputArquivo" placeholder="Arquivo" name="planoEstagio" /> 
+			         </div>
+			         
+			         <div class="modal-footer">
+			           <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+			           <button type="submit" class="btn btn-success">Submeter <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></button>
+			         </div>
+			     </div>
+			   </div>
+			</form>
+			<div th:if="${submissaoPlano} != null" id="submissaoPlano" class="modal">
+			<form class="form-horizontal" th:action="@{/Estagiario/Acompanhamento/${idEstagio}/EditarPlano}" method="post" enctype="multipart/form-data"> 
+			<div class="modal-dialog">
+			     <div class="modal-content">
+			       <div class="modal-header">
+			         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			         <h4 class="modal-title">Plano de Estágio</h4>
+			       </div>
+			
+			         <div class="modal-body">
+			             <label for="inputArquivo">Plano de Estágio</label><br/>
+			             <input type="file" class="form-control" id="inputArquivo" placeholder="Arquivo" name="planoEstagio" /> 
+			         </div>
+			         
+			         <div class="modal-footer">
+			           <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+			           <button type="submit" class="btn btn-success">Submeter <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></button>
+			         </div>
+			     </div>
+			   </div>
+			</form>
+			</div>
+		</div>
+
+
+	     <div id="submissaoRelatorio" class="modal">
+	     	<form class="form-horizontal" th:action="@{/Estagiario/Acompanhamento/Estagio/${idEstagio}/SubmeterRelatorio}" method="post" enctype="multipart/form-data">
+			   <div class="modal-dialog">
+			     <div class="modal-content">
+			       <div class="modal-header">
+			         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			         <h4 class="modal-title">Relatório de Estágio</h4>
+			       </div>
+			
+			         <div class="modal-body">
+			             <label for="inputArquivo">Relatório de Estágio</label><br/>
+			             <input type="file" class="form-control" id="inputArquivo" placeholder="Arquivo" name="relatorio" /> 
+			         </div>
+			         
+			         <div class="modal-footer">
+			           <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+			           <button type="submit" class="btn btn-success">Submeter <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></button>
+			         </div>
+			     </div>
+			   </div>	 
+	     	</form>	
+	     </div>
+	     <div th:if="${submissaoPlano} == null" id="submissaoRelatorio" class="modal">
+	     	<form class="form-horizontal" th:action="@{/Estagiario/Acompanhamento/Estagio/${idEstagio}/EditarRelatorio}" method="post" enctype="multipart/form-data">
+			   <div class="modal-dialog">
+			     <div class="modal-content">
+			       <div class="modal-header">
+			         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			         <h4 class="modal-title">Relatório de Estágio</h4>
+			       </div>
+			
+			         <div class="modal-body">
+			             <label for="inputArquivo">Relatório de Estágio</label><br/>
+			             <input type="file" class="form-control" id="inputArquivo" placeholder="Arquivo" name="relatorio" /> 
+			         </div>
+			         
+			         <div class="modal-footer">
+			           <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+			           <button type="submit" class="btn btn-success">Submeter <i class="fa fa-arrow-circle-up" aria-hidden="true"></i></button>
+			         </div>
+			     </div>
+			   </div>	 
+	     	</form>	
+	     </div>
+	     
   </section>
 </html>
