--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/avaliar-relatorio.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/avaliar-relatorio.html
@@ -77,46 +77,50 @@
 				<a th:href="@{/Supervisor/Turma/Acompanhamento/1/AvaliarRelatorio}" class="btn btn-xs pull-right gp-btn-opcao">editar</a>
 				
 	          </div>
+	 
 	          <div id="avaliarRelatorio" class="panel-body collapse in">
+		          <form class="gp-align-left form-horizontal">
+			          <div class="form-group">
+			          	<label for="documento" class="col-lg-2 control-label">Documento</label>
+			          </div>
+		          </form>
 		          <form class="gp-align-left form-horizontal" th:action="@{/Supervisor/Turma/Acompanhamento/1/AvaliarRelatorio}" method="post">
-				    
 				    <div class="form-group">
-      					<label for="status" class="col-lg-2 control-label">Status</label>
-      					<div class="col-lg-10">
+	     					<label for="status" class="col-lg-2 control-label">Status</label>
+	     					<div class="col-lg-10">
 					        <select class="form-control" id="status" title="Status" name="status">
-					          <option hidden="status"></option>
 					          <option th:each ="status : ${statusEntrega}" 
 					          		  th:value = "${status}" 
-					          		  th:text = "${status.descricao}">
+					          		  th:text = "${status.descricao}"
+					          		  th:if="${#strings.equals(status, submissaoRelatorio.statusEntrega)}" selected="selected">
 					          </option>
 					        </select>
 					    </div>
 					</div>
 				   
 				    <div class="form-group">
-  						<label class="control-label col-lg-2" for="nota"> Nota</label>
-  						<div class="col-lg-10">
-  						<input type="text" class="form-control" id="nota" placeholder="0.0" name="nota" th:value="${submissaoRelatorio.nota}"/>
+	 						<label class="control-label col-lg-2" for="nota"> Nota</label>
+	 						<div class="col-lg-10">
+	 						<input type="text" class="form-control" id="nota" placeholder="0.0" name="nota" th:value="${submissaoRelatorio.nota}"/>
 						</div>
 					</div>
 					
 				    
 		         	<div class="form-group">
-      					<label for="comentario" class="col-lg-2 control-label">Comentário</label>
-      					<div class="col-lg-10">
-        					<textarea class="form-control" rows="3" id="comentario" name="comentario" th:text="${submissaoRelatorio.comentario}"></textarea>
-        					<span class="help-block">Digite um comentário sobre o Relatório do Aluno</span>
-      					</div>
-    				</div>
-    				
-    				<div class="form-group pull-right">
-      					<div class="col-lg-10 col-lg-offset-2">
-        					<button type="reset" class="btn btn-default">Cancelar</button>
-        					<button type="submit" class="btn btn-success">Salvar</button>
-      					</div>
-    				</div>
+	     					<label for="comentario" class="col-lg-2 control-label">Comentário</label>
+	     					<div class="col-lg-10">
+	       					<textarea class="form-control" rows="3" id="comentario" name="comentario" th:text="${submissaoRelatorio.comentario}"></textarea>
+	       					<span class="help-block">Digite um comentário sobre o Relatório do Aluno</span>
+	     					</div>
+	   				</div>
+	   				
+	   				<div class="form-group pull-right">
+	     					<div class="col-lg-10 col-lg-offset-2">
+	       					<button type="reset" class="btn btn-default">Cancelar</button>
+	       					<button type="submit" class="btn btn-success">Salvar</button>
+	     					</div>
+	   				</div>
 		          </form>
-
 	           </div>
 	        </div>
 	      </div>
