--- a/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
+++ b/aplicacoes/gestao-pessoas/src/main/resources/templates/supervisor/acompanhamento-estagiario.html
@@ -160,20 +160,21 @@
 	          <div class="panel-heading">
 	            <a class="panel-title" data-toggle="collapse" data-target="#avaliacaoRendimento"><i class="fa fa-caret-down" aria-hidden="true"></i> Avaliação Rendimento</a>
 			  </div>
-	          <div id="avaliacaoRendimento" class="panel-body collapse in">
+	        <div id="avaliacaoRendimento" class="panel-body collapse in">
+	         <div class="avaliacao" th:if="${estagio.avaliacaoRendimento != null}">
 	   			<div class="row">
 	         		<div class="col-md-12"><h6>ASSIDUIDADE E DISCIPLINA</h6></div>
 				     <div class="col-md-12">
 				      <strong>Frequência:</strong>
-				      <p th:text="${estagio.avaliacaoRendimento.frequencia.descricaoItem}"></p>
+				      <p th:text="${estagio.avaliacaoRendimento.frequencia != null} ? ${estagio.avaliacaoRendimento.frequencia.descricaoItem} : ' '"></p>
 				      </div>
 				      <div class="col-md-12">
 				      	<strong>Permanência:</strong>
-				      	<p th:text="${estagio.avaliacaoRendimento.permanencia.descricaoItem}"> </p>
+				      	<p th:text="${estagio.avaliacaoRendimento.permanencia != null} ? ${estagio.avaliacaoRendimento.permanencia.descricaoItem} : ' '"> </p>
 				      </div>
 				      <div class="col-md-12">
 				      	<strong>Disciplina quando ao cumprimento de normas:</strong>
-				      	<p th:text="${estagio.avaliacaoRendimento.disciplina.descricaoItem}"></p>
+				      	<p th:text="${estagio.avaliacaoRendimento.disciplina != null} ? ${estagio.avaliacaoRendimento.disciplina.descricaoItem} : ' '"></p>
 				      </div>
 				      <div class="col-md-12">
 				      	<strong>Comentário:</strong>
@@ -185,19 +186,19 @@
 				      	<div class="col-md-12"><h6 >INICIATIVA E PRODUTIVIDADE</h6></div>
 				      	<div class="col-md-12">
 				      		<strong>Iniciativa:</strong>
-							<p th:text="${estagio.avaliacaoRendimento.iniciativa.descricaoItem}"></p>
+								<p th:text="${estagio.avaliacaoRendimento.iniciativa != null} ? ${estagio.avaliacaoRendimento.iniciativa.descricaoItem} : ' '"></p>
 						 </div>
 				      	<div class="col-md-12">
 				      		<strong>Quantidade de Trabalho:</strong>
-				      		<p th:text="${estagio.avaliacaoRendimento.quantidadeTrabalho.descricaoItem}"></p>
+				      		<p th:text="${estagio.avaliacaoRendimento.quantidadeTrabalho !=null} ? ${estagio.avaliacaoRendimento.quantidadeTrabalho.descricaoItem} : ' '"></p>
 				      	</div>
 				      <div class="col-md-12">
 				      		<strong>Qualidade de Trabalho:</strong>
-				      		<p th:text="${estagio.avaliacaoRendimento.qualidadeTrabalho.descricaoItem}"></p> 
+				      		<p th:text="${estagio.avaliacaoRendimento.qualidadeTrabalho != null} ? ${estagio.avaliacaoRendimento.qualidadeTrabalho.descricaoItem} : ' '"></p> 
 				      </div>
 				      <div class="col-md-12">
 				      		<strong>Cumprimento de prazos:</strong>
-				      		<p th:text="${estagio.avaliacaoRendimento.cumprimentoPrazos.descricaoItem}"></p>
+				      		<p th:text="${estagio.avaliacaoRendimento.cumprimentoPrazos  != null} ? ${estagio.avaliacaoRendimento.cumprimentoPrazos.descricaoItem} : ' '"></p>
 			      	  </div>
 			      	   <div class="col-md-12">
 				      	<strong>Comentário:</strong>
@@ -209,11 +210,11 @@
 			      		<div class="col-md-12"><h6 >RESPONSABILIDADE</h6></div>
 				      		<div class="col-md-12">
 				      		<strong>Comprometimento com o trabalho:</strong>
-				      		<p th:text="${estagio.avaliacaoRendimento.comprometimento.descricaoItem}"></p>
+				      		<p th:text="${estagio.avaliacaoRendimento.comprometimento != null} ? ${estagio.avaliacaoRendimento.comprometimento.descricaoItem} : ' '"></p>
 				    	  </div>
 				    	  <div class="col-md-12">
 				      		<strong>Cuidado com materiais e equipamentos:</strong>
-				      		<p th:text="${estagio.avaliacaoRendimento.cuidadoMateriais.descricaoItem}"></p>
+				      		<p th:text="${estagio.avaliacaoRendimento.cuidadoMateriais != null} ? ${estagio.avaliacaoRendimento.cuidadoMateriais.descricaoItem} : ' '"></p>
 				    	  </div>
 				    	 <div class="col-md-12">
 				      		<strong>Comentário:</strong>
@@ -225,17 +226,18 @@
 			      		<div class="col-md-12"><h6>RELACIONAMENTO</h6></div>
 				      	<div class="col-md-12">
 				      		<strong>Relacionamento junto a gerência e demais funcionários:</strong>
-				      		<p th:text="${estagio.avaliacaoRendimento.relacionamento.descricaoItem}"></p>
+				      		<p th:text="${estagio.avaliacaoRendimento.relacionamento != null} ? ${estagio.avaliacaoRendimento.relacionamento.descricaoItem} : ' ' "></p>
 				      	</div>
 				      	<div class="col-md-12">
 				      		<strong>Trabalho em equipe:</strong>
-				      		<p th:text="${estagio.avaliacaoRendimento.trabalhoEquipe.descricaoItem}"></p>
+				      		<p th:text="${estagio.avaliacaoRendimento.trabalhoEquipe != null} ? ${estagio.avaliacaoRendimento.trabalhoEquipe.descricaoItem} : ' '"></p>
 				     	 </div>
 				     	 <div class="col-md-12">
 				      		<strong>Comentário:</strong>
 				      		<p th:text="${estagio.avaliacaoRendimento.fatorRelacionamentoComentario}"></p>
 				     	 </div>
 			     </div>
+			  </div>
 				          		
 		        <a th:href="@{/Supervisor/Turma/Acompanhamento/1#}" class="btn btn-success btn-sm pull-right">Avaliar</a>
 	           </div>
